--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="ArcProgress">
-        <attr name="arc_progress" format="integer"/>
-        <attr name="arc_angle" format="float"/>
-        <attr name="arc_stroke_width" format="dimension"/>
-        <attr name="arc_max" format="integer"/>
+        <attr name="progress" format="integer"/>
+        <attr name="angle" format="float"/>
+        <attr name="stroke_width" format="dimension"/>
+        <attr name="max" format="integer"/>
 
-        <attr name="arc_unfinished_color" format="color"/>
-        <attr name="arc_finished_color" format="color"/>
+        <attr name="unfinished_color" format="color"/>
+        <attr name="finished_color" format="color"/>
 
-        <attr name="arc_text_size" format="dimension"/>
-        <attr name="arc_text_color" format="color"/>
+        <attr name="text_color" format="color"/>
 
-        <attr name="arc_suffix_text" format="string"/>
-        <attr name="arc_suffix_text_size" format="dimension"/>
-        <attr name="arc_suffix_text_padding" format="dimension"/>
+        <attr name="suffix_text" format="string"/>
+        <attr name="suffix_text_size" format="dimension"/>
+        <attr name="suffix_text_padding" format="dimension"/>
 
-        <attr name="arc_bottom_text" format="string"/>
-        <attr name="arc_bottom_text_size" format="dimension"/>
+        <attr name="bottom_text" format="string"/>
+        <attr name="bottom_text_size" format="dimension"/>
+
+        <attr name="progress_text" format="string"/>
+        <attr name="progress_text_size" format="dimension"/>
     </declare-styleable>
 </resources>
